# kwin

./: CMakeLists.txt  abstract_client.cpp  abstract_client.h  activation.cpp  atoms.cpp  buffer.cpp  buffer.h  buffer_internal.cpp  buffer_internal.h  buffer_internal_p.h  buffer_p.h  buffer_wayland.cpp  buffer_wayland.h  buffer_wayland_p.h  buffer_x11.cpp  buffer_x11.h  buffer_x11_p.h  client.cpp  client.h  composite.cpp  composite.h  config-kwin.h.cmake  deleted.cpp  deleted.h  effects.cpp  effects.h  events.cpp  geometry.cpp  group.cpp  input.cpp  input.h  input_event.cpp  input_event.h  internal_client.cpp  internal_client.h  keyboard_layout.cpp  keyboard_layout.h  keyboard_layout_icon_provider.cpp  keyboard_layout_icon_provider.h  kwinnamespace.h  (+58 more)
autotests/: CMakeLists.txt  mock_abstract_client.cpp  mock_abstract_client.h  test_builtin_effectloader.cpp  test_plugin_effectloader.cpp  test_screen_edges.cpp  test_scripted_effectloader.cpp  test_window_paint_data.cpp
autotests/integration/: CMakeLists.txt  activation_test.cpp  dbus_interface_test.cpp  debug_console_test.cpp  decoration_input_test.cpp  desktop_window_x11_test.cpp  dont_crash_aurorae_destroy_deco.cpp  (+32 more)
colorcorrection/: colorcorrectdbusinterface.cpp  colorcorrectdbusinterface.h  manager.cpp  manager.h
effects/: CMakeLists.txt  effect_builtins.cpp  effect_builtins.h  shaders.qrc
effects/fadedesktop/: CMakeLists.txt  fadedesktop.cpp  fadedesktop.h  fadedesktop.kcfg  fadedesktop_config.cpp  fadedesktop_config.desktop  fadedesktop_config.h  fadedesktop_config.ui  fadedesktopconfig.kcfgc
effects/slidedesktops/: CMakeLists.txt  slidedesktops.cpp  slidedesktops.h  slidedesktops.kcfg  slidedesktops_config.cpp  slidedesktops_config.desktop  slidedesktops_config.h  slidedesktops_config.ui  slidedesktopsconfig.kcfgc
kcmkwin/kwinscripts/: CMakeLists.txt  Messages.sh  kcm.cpp  kcm.h  kcm_kwin_scripts.desktop  scriptsfilterproxymodel.cpp  scriptsfilterproxymodel.h
kcmkwin/kwinscripts/package/: metadata.desktop
kcmkwin/kwinscripts/package/contents/ui/: Script.qml  main.qml
kconf_update/: kwin.upd
libinput/: connection.cpp  connection.h  context.cpp  context.h  events.cpp  events.h
libkwineffects/: CMakeLists.txt  anidata.cpp  anidata_p.h  kwinanimationeffect.cpp  kwinanimationeffect.h  kwineffects.cpp  kwineffects.h  kwinglmultisampletexture.cpp  kwinglmultisampletexture.h  kwingltexture.cpp  kwingltexture.h  kwingltexture_p.h  kwinglutils.cpp  kwinglutils.h
platformsupport/scenes/opengl/: CMakeLists.txt  abstract_egl_backend.cpp  abstract_egl_backend.h  backend.cpp  backend.h  eglbuffer_internal.cpp  eglbuffer_internal_p.h  eglbuffer_wayland.cpp  eglbuffer_wayland_p.h  openglbuffer_internal.cpp  openglbuffer_internal_p.h  openglbuffer_wayland.cpp  openglbuffer_wayland_p.h  openglplatformtexture.cpp  openglplatformtexture.h  openglplatformtexture_dmabuf.cpp  openglplatformtexture_dmabuf.h  openglplatformtexture_egl.cpp  openglplatformtexture_egl.h  openglplatformtexture_fbo.cpp  openglplatformtexture_fbo.h  openglplatformtexture_image.cpp  openglplatformtexture_image.h  openglplatformtexture_p.h  openglplatformtexture_shm.cpp  openglplatformtexture_shm.h  texture.cpp  texture.h
plugins/scenes/qpainter/: CMakeLists.txt  qpainterdecorationscenenode.cpp  qpainterdecorationscenenode.h  qpainterplatformsurface_internal.cpp  qpainterplatformsurface_internal.h  qpainterplatformsurface_wayland.cpp  qpainterplatformsurface_wayland.h  qpaintershadowscenenode.cpp  qpaintershadowscenenode.h  qpaintersurfacescenenode.cpp  qpaintersurfacescenenode.h  scene_qpainter.cpp  scene_qpainter.h
scripting/: effectshandler_wrapper.cpp  effectshandler_wrapper.h  effectwindow_wrapper.cpp  effectwindow_wrapper.h  scriptedeffect.cpp  scriptedeffect.h  scripting.cpp  scripting_model.cpp  workspace_wrapper.cpp  workspace_wrapper.h
scripts/: CMakeLists.txt
tabbox/: tabbox.cpp
tests/: CMakeLists.txt
toolkit/: udev_context.cpp  udev_context.h  udev_device.cpp  udev_device.h  udev_enumerator.cpp  udev_enumerator.h  udev_monitor.cpp  udev_monitor.h
(+160 files in other folders)
